# haskell-exercises

./: list-exercises.hs  list-quicksort.hs
sum/: sum.cabal
sum/app/: Main.hs
sum/src/: Sum.hs
sum/test/: SumSpec.hs
